Upgrades are general items referenced from a location.

--- a/app/templates/configure/item.html
+++ b/app/templates/configure/item.html
@@ -17,13 +17,12 @@
     <p class="info">
         Storage type is important to consider. General (accessible anywhere) is
         good for idle progress, while carried is for RPGs.
-        Typical items tied to a location include crafting stations and livestock,
-        and locations are also a good way to group items.
+        Crafting stations are tied to a location.
         To store more than one way, create an additional item
         and convert with a recipe.
         For example:
         <i>funds</i> in the bank (general) &rarr; <i>cash</i> on hand (carried),
-        or <i>cow</i> &rarr; <i>cow (transport)</i>
+        or <i>cow</i> in pen (location) &rarr; <i>cow (transport)</i> (carried)
         so it can be picked up by a truck.
     </p>
     <form method="post" style="padding-bottom: 60px">
