Storage of Progress (but not quantity) for local items is handled by Item.

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -351,11 +351,11 @@ textarea {
 }
 
 .progress-bar::-webkit-progress-value {
-    background-color: blue; /* filled progress */
+    background-color: #6c7d8c; /* filled progress */
 }
 
 .progress-bar::-moz-progress-bar {  /* Firefox */
-    background-color: #blue;
+    background-color: #6c7d8c;
 }
 
 .progress-label {
