--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -99,11 +99,20 @@
             </tr>
             <tr>
                 <td>
+                    <style>
+                        .progress-bar.different-color::-webkit-progress-value {
+                            background-color: blue;
+                        }
+
+                        .progress-bar.different-color::-moz-progress-bar {
+                            background-color: blue;
+                        }
+                    </style>
                     <div id="action-progress-container"
                          style="width: 60%;"
                          class="progress-container hidden">
                         <progress id="action-progress-bar"
-                            class="progress-bar"
+                            class="progress-bar different-color"
                             value="0"
                             max="100"></progress>
                         <span class="progress-label" id="action-progress-label">0%</span>
