--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -24,7 +24,7 @@
         });
     </script>
     <h1>{{ current.title }}</h1>
-    <p class="info">{{ current.description|htmlify }}</p>
+    <p>{{ current.description|htmlify }}</p>
     <div class="column-container">
         <div><!-- lefthand column -->
             <!-- Top-level Events -->
