Operations for event determinants instead of attributes and items.

--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -86,7 +86,7 @@
                 {% endif %}
             </div>
         </div>
-        <div id="items-container" class="outer-border">
+        <div class="outer-border">
             <table id="items-table" style="display: none;">
                 <thead>
                     <tr>
