--- a/app/templates/configure/event.html
+++ b/app/templates/configure/event.html
@@ -79,53 +79,66 @@
                    name="numeric_max"
                    value="{{ current.numeric_range[1] }}"
                    size="8">
-            <span class="label-like">If negative, enter for example Min -10 and Max -2</span>
+            <!--<span class="label-like">If negative, enter for example Min -2 and Max -10</span>-->
         </div>
         <div id="selection-container">
             <label for="selection-strings">Enter a list to choose from (one per line):</label>
             <textarea id="selection-strings" name="selection_strings" rows="10" cols="30">{{ current.selection_strings }}</textarea>
         </div>
         <div class="entity-list-container outer-border"
-             id="determining-entities-container">
+             id="determinant-entities-container">
             <h3 class="label-like">Determining Values</h3>
             <p class="info label-like">
             Stats such as strength, or item quantity, can help
             determine the outcome by adjusting the die min and max.
             </p>
             <!-- Placeholder for appending new entities -->
-            <div id="determining_list_end" class="unobtrusive"></div>
-            <div class="select-box-container">
-                {% if game_data.attribs %}
-                    <div class="select-box"
-                         title="On the event play screen, you choose an entity to use that has this attribute.">
-                        <select class="add-entity-select">
-                            <option value="" selected>(Select attribute)</option>
-                            {% for attrib in game_data.attribs %}
-                                <option value="{{ attrib.id }}" data-mult="{{ attrib.mult | lower }}">{{ attrib.name }}</option>
-                            {% endfor %}
-                        </select>
-                        <button type="button"
-                                class="add-entity-btn lesser-button"
-                                data-relType="determining"
-                                data-entityType="attrib">Add</button>
-                    </div>
-                {% endif %}
-                {% if game_data.items %}
-                    <div class="select-box"
-                         title="Uses the quantity of this item, such as how many held in a selected character's inventory.">
-                        <select class="add-entity-select">
-                            <option value="" selected>(Select item)</option>
-                            {% for item in game_data.items %}
-                                <option value="{{ item.id }}" data-mult="{{ item.mult | lower }}">{{ item.name }}</option>
-                            {% endfor %}
-                        </select>
-                        <button type="button"
-                                class="add-entity-btn lesser-button"
-                                data-relType="determining"
-                                data-entityType="item">Add</button>
-                    </div>
-                {% endif %}
-                {% if not game_data.attribs and not game_data.items %}<p class="no-entities">(No attributes or items)</p>{% endif %}
+            <div class="outer-border">
+                <table id="determinant-table" style="display: none;">
+                    <thead>
+                        <tr>
+                            <th title="The attribute or item whose value is being used">Name</th>
+                            <th title="For example, set to 'Accuracy' when the 'Dex' attribute increases hit chance. Optional.">Label</th>
+                            <th title="For example, 'Add' means the value can be added to the die roll">Operation</th>
+                            <th class="transparent-col"></th>
+                        </tr>
+                    </thead>
+                    <tbody id="determinant-rows">
+                    </tbody>
+                </table>
+                <div class="select-box-container">
+                    {% if game_data.attribs %}
+                        <div class="select-box"
+                             title="On the event play screen, you choose an entity to use that has this attribute.">
+                            <select class="add-entity-select">
+                                <option value="" selected>(Select attribute)</option>
+                                {% for attrib in game_data.attribs %}
+                                    <option value="{{ attrib.id }}"">{{ attrib.name }}</option>
+                                {% endfor %}
+                            </select>
+                            <button type="button"
+                                    class="add-entity-btn lesser-button"
+                                    data-relType="determinant"
+                                    data-entityType="attrib">Add</button>
+                        </div>
+                    {% endif %}
+                    {% if game_data.items %}
+                        <div class="select-box"
+                             title="Uses the quantity of this item, such as how many held in a selected character's inventory.">
+                            <select class="add-entity-select">
+                                <option value="" selected>(Select item)</option>
+                                {% for item in game_data.items %}
+                                    <option value="{{ item.id }}">{{ item.name }}</option>
+                                {% endfor %}
+                            </select>
+                            <button type="button"
+                                    class="add-entity-btn lesser-button"
+                                    data-relType="determinant"
+                                    data-entityType="item">Add</button>
+                        </div>
+                    {% endif %}
+                    {% if not game_data.attribs and not game_data.items %}<p class="no-entities">(No attributes or items)</p>{% endif %}
+                </div>
             </div>
         </div>
         <div class="entity-list-container outer-border"
@@ -138,7 +151,7 @@
                 the damage of a strike.
             </p>
             <!-- Placeholder for appending new entities -->
-            <div id="changed_list_end" class="unobtrusive"></div>
+            <div id="changed-list-end" class="unobtrusive"></div>
             <div class="select-box-container">
                 {% if game_data.attribs %}
                     <div class="select-box"
@@ -159,7 +172,7 @@
                         <select class="add-entity-select">
                             <option value="" selected>(Select item)</option>
                             {% for item in game_data.items %}
-                                <option value="{{ item.id }}" data-mult="{{ item.mult | lower }}">{{ item.name }}</option>
+                                <option value="{{ item.id }}">{{ item.name }}</option>
                             {% endfor %}
                         </select>
                         <button type="button"
@@ -184,7 +197,7 @@
                 and they can be linked in a Character's settings.
             </p>
             <!-- Placeholder for appending new entities -->
-            <div id="triggers_list_end" class="unobtrusive"></div>
+            <div id="triggers-list-end" class="unobtrusive"></div>
             <div class="select-box-container">
                 {% if game_data.items %}
                     <div class="select-box" title="Triggered by production of this item.">
@@ -256,17 +269,17 @@
                 console.log(`outcomeType=${outcomeType}`);
                 const numericFactorsDiv = $('#numeric-factors');
                 const selectionStringsDiv = $('#selection-container');
-                const determiningAttribsDiv = $('#determining-entities-container');
+                const determinantAttribsDiv = $('#determinant-entities-container');
                 const changedAttribsDiv = $('#changed-entities-container');
                 if (outcomeType === "selection") {
                     numericFactorsDiv.css('display', 'none');
                     selectionStringsDiv.css('display', 'block');
-                    determiningAttribsDiv.css('display', 'none');
+                    determinantAttribsDiv.css('display', 'none');
                     changedAttribsDiv.css('display', 'none');
                 } else {
                     numericFactorsDiv.css('display', 'block');
                     selectionStringsDiv.css('display', 'none');
-                    determiningAttribsDiv.css('display', 'block');
+                    determinantAttribsDiv.css('display', 'block');
                     changedAttribsDiv.css('display', 'block');
                 }
             }
@@ -276,9 +289,34 @@
             outcomeTypeVisibility();
 
             // Add an entity next to a placeholder
+            function addDeterminant(entityType, entityId, entityName, detLabel="", operation="+") {
+                const entityHtml = `
+                    <tr>
+                        <td>${entityName}
+                            <input type="hidden" name="determinant_type[]" value="${entityType}">
+                            <input type="hidden" name="determinant_id[]" value="${entityId}">
+                        </td><td>
+                            <input type="text" name="determinant_label[]" value="${detLabel}" size="8">
+                        </td><td>
+                            <!-- causes determinant_operation[] key (as well as determinant_operation key) to be included in form submission even when no value -->
+                            <input type="hidden" name="determinant_operation" value="">
+                            <select name="determinant_operation[]">
+                                <option value="">–</option>
+                                {% for op_value, op_name in OPERATIONS %}
+                                    <option value="{{ op_value }}">{{ op_name }}</option>
+                                {% endfor %}
+                            </select>
+                        </td><td>
+                            <button type="button" class="remove-determinant-btn lesser-button">Remove</button>
+                        </td>
+                    </tr>
+                `;
+                $('#determinant-rows').prepend(entityHtml);
+                $('#determinant-table').show();
+            }
             function addEntity(relType, entityType, entityId, entityName, mult = false) {
                 // Check for duplicates: entityType + entityId must be unique within relType
-                const existingEntity = $(`#${relType}_list_end`).siblings(
+                const existingEntity = $(`#${relType}-list-end`).siblings(
                     `[data-entity-type="${entityType}"][data-entity-id="${entityId}"]`);
                 if (existingEntity.length > 0) {
                     alert(`${entityName} is already in the list.`);
@@ -288,18 +326,26 @@
                     <div class="entity flexdiv" data-entity-type="${entityType}" data-entity-id="${entityId}">
                         <input type="hidden" name="${relType}_type[]" value="${entityType}">
                         <input type="hidden" name="${relType}_id[]" value="${entityId}">
-                        ${entityName}&nbsp;<span class="label-like">
-                        ${(relType === 'determining' || relType === 'changed') 
-                            ? (mult ? '(Multiplied)' : '(Added)') 
-                            : ''}</span>&nbsp;
+                        ${entityName}
                         <button type="button" class="remove-entity-btn lesser-button">Remove</button>
                     </div>
                 `;
-                $(`#${relType}_list_end`).before(entityHtml);
+                $(`#${relType}-list-end`).before(entityHtml);
             }
 
             // load data initially
-            {% for relType in ['determining', 'changed', 'triggers'] %}
+            {% set list = current.determining_entities %}
+            console.log("determinant[{{ list | length }}]");
+            {% for entity in list %}
+                addDeterminant(
+                    "{{ entity.typename() }}",
+                    "{{ entity.id }}",
+                    "{{ entity.name }}",
+                    "{{ entity.label }}",
+                    "{{ entity.operation }}",
+                );
+            {% endfor %}
+            {% for relType in ['changed', 'triggers'] %}
                 {% set list = getattr(current, relType + '_entities', []) %}
                 console.log("{{ relType }}[{{ list | length }}]");
                 {% for entity in list %}
@@ -308,7 +354,6 @@
                         "{{ entity.typename() }}",
                         "{{ entity.id }}",
                         "{{ entity.name }}",
-                        {{ entity.mult | default(False) | lower }}
                     );
                 {% endfor %}
             {% endfor %}
@@ -316,6 +361,10 @@
             $('.entity-list-container').on('click', '.remove-entity-btn', (event) => {
                 const entityContainer = $(event.currentTarget).closest('.entity');
                 entityContainer.remove();
+            });
+            $('#determinant-rows').on('click', '.remove-determinant-btn', (event) => {
+                const detContainer = $(event.currentTarget).closest('tr');
+                detContainer.remove();
             });
 
             $('.add-entity-btn').click((event) => {
@@ -331,13 +380,17 @@
                 if (entityId === '') {
                     return; // Don't add if the selected option is the placeholder
                 }
+                if (relType == 'determinant') {
+                    addDeterminant(entityType, entityId, entityName);
+                    return;
+                }
                 const existingItem = $(`.triggers-entities-container`)
                     .find(`.entity[data-entity-id="${entityId}"][data-entity-type="${entityType}"]`);
                 if (existingItem.length > 0) {
                     alert(`${capitalizeFirstLetter(entityType)} already added.`);
                     return;
                 }
-                addEntity(relType, entityType, entityId, entityName, mult);
+                addEntity(relType, entityType, entityId, entityName);
             });
             function capitalizeFirstLetter([ first='', ...rest ], locale) {
               return [ first.toLocaleUpperCase(locale), ...rest ].join('');
